--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "aws-sdk": "^2.1058.0",
     "dotenv": "^12.0.4",
     "express": "^4.17.2",
-    "multer": "^1.4.4"
-    },
+    "multer": "^1.4.4",
+    "prettier": "^2.5.1"
+  },
   "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "nodemon": "^2.0.15"
   }
 }
