--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1058.0",
-    "dotenv": "^12.0.4",
+    "body-parser": "^1.19.1",
+    "dotenv": "^14.1.0",
     "express": "^4.17.2",
     "multer": "^1.4.4",
-    "prettier": "^2.5.1"
+    "pino": "^7.6.3",
+    "pino-pretty": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
