--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     },
     "rules": {
         "no-console":"error",
-        "linebreak-style":"off"
+        "linebreak-style":"off",
+        "object-curly-newline":"off"
     }
 }
